clusters/cluster0/kubernetes/apps/media/rreading-glasses/app/rreading-glasses-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rreading-glasses-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: rreading-glasses
  ports:
    - port: 8788
      protocol: TCP
      targetPort: 8788
